force-app/main/default/objects/Personnel__c.object
<CustomObject>
    <label>人員設定檔</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Personnel No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Dept__c</fullName>
        <formula>TEXT(Name__r.Team__c)</formula>
        <label>科別</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>職員姓名</label>
        <referenceTo>User</referenceTo>
        <relationshipName>P_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <formula>TEXT(Name__r.Unit__c)</formula>
        <label>區部</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <formula>Name__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emp_No__c</fullName>
        <formula>Name__r.Employee_No__c</formula>
        <label>員編</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_Area__c</fullName>
        <formula>TEXT(Name__r.Area__c)</formula>
        <label>大地理區</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reg_Code__c</fullName>
        <formula>TEXT(Name__r.Unit_Code__c)</formula>
        <label>區部代碼</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <formula>Name__r.Title</formula>
        <label>職稱</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Group__c</fullName>
        <formula>TEXT(Name__r.Customer_Segment__c)</formula>
        <label>客群</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Limit__c</fullName>
        <defaultValue>30</defaultValue>
        <label>預佔上限名額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dispatch_Case__c</fullName>
        <label>已分派案件</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reserved_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>已預佔數量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sec_Corr_Branch__c</fullName>
        <label>第二順位對口分行</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Branch</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prim_Corr_Branch__c</fullName>
        <label>第一順位對口分行</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Branch</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Remain_Quota__c</fullName>
        <formula>Account_Limit__c - Reserved_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>預佔剩餘名額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Level_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>一階審核人員</label>
        <referenceTo>User</referenceTo>
        <relationshipName>P_First_Level_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Level_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>二階審核人員</label>
        <referenceTo>User</referenceTo>
        <relationshipName>P_Second_Level_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Emp_No__c</columns>
        <columns>Cust_Group__c</columns>
        <columns>Geo_Area__c</columns>
        <columns>Dept__c</columns>
        <columns>First_Level_Approver__c</columns>
        <columns>Second_Level_Approver__c</columns>
        <columns>Prim_Corr_Branch__c</columns>
        <columns>Sec_Corr_Branch__c</columns>
        <columns>Active__c</columns>
        <columns>Reserved_Amount__c</columns>
        <columns>Account_Limit__c</columns>
        <columns>Account_Remain_Quota__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
</CustomObject>